# Syllego

./: .gitignore  AGENT_SPEC.md  CLAUDE.md  README.md  pyproject.toml
mmi/: __init__.py  __main__.py  cli.py  config.py  cookie_harvest.py  stealth.py  tor_pool.py
mmi/db/: history.py
mmi/engine/: _ytdlp_common.py  base.py  custom_worker.py  facebook_worker.py  gallery_worker.py  generic_worker.py  odysee_worker.py  playwright_worker.py  router.py  rumble_stealth_worker.py  rumble_worker.py  ytdlp_worker.py
mmi/reporting/: reporter.py
tests/: conftest.py  test_cli.py  test_config.py  test_init.py
tests/db/: test_history.py
tests/engine/: test_base.py  test_custom_worker.py  test_gallery_worker.py  test_generic_worker.py  test_odysee_worker.py  test_router.py  test_rumble_worker.py  test_ytdlp_common.py  test_ytdlp_worker.py
tests/integration/: live_test.py
tests/reporting/: test_reporter.py
