[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmi"
version = "0.1.0"
description = "Modular Media Ingestor — priority-ordered worker chain for downloading media from diverse websites"
requires-python = ">=3.9"
dependencies = [
    "yt-dlp>=2024.0.0",
    "gallery-dl>=1.26.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
mmi = "mmi.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["mmi"]
